# QT_CrossPlatform_Development

Lesson1/Task1/HelloGraphicWorld/: CMakeLists.txt  main.cpp
Lesson2/Task1/: CMakeLists.txt
Lesson2/Task1/source/: main.cpp
Lesson3/Task1/QtBDDialogWindow/: CMakeLists.txt  bddialogwindow.cpp  bddialogwindow.h  bddialogwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Lesson4/Task1/ToggleButton/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson5/Task1/Stopwatch/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Lesson6/Task1/QtConcurrentRace/: CMakeLists.txt  ExampleRace.cpp  ExampleRace.h  mainwindow.cpp  mainwindow.h
