cmake_minimum_required(VERSION 3.20)
project(QT_L2_T1 VERSION 1.0)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Qt6 REQUIRED COMPONENTS Core Network Sql)
add_executable(main)
set(sources ${CMAKE_CURRENT_SOURCE_DIR}/source/main.cpp)
target_sources(main PRIVATE ${sources})
target_link_libraries(main PRIVATE Qt6::Core Qt6::Network Qt6::Sql)
install(TARGETS main DESTINATION ${PROJECT_SOURCE_DIR}/install)
